# Trust-AI-Browser-Moderator

./: DOCKERFILE  Dockerfile  LICENSE  README.md  inference.py  manifest.json  openenv.yaml  pyproject.toml  sw.js
client_notebooks/: Untitled.ipynb
client_notebooks/response_output/: last_run.json
dashboard/: index.html  script.js  style.css
envs/: inference.py  models.py  moderator_config.json  server.py
metadata/: openenv.yaml
response_output/: last_run.json
server/: app.py
